--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <button id="restart-button">Restart</button>
     </div>
     <div id="game-container">
-        <canvas id="game-container" width="400" height="600"></canvas>
+        <canvas id="game-canvas" width="400" height="600"></canvas>
         <div id="score-display">0</div>
     </div>
     <script src="game.js"></script>
